Update RenderCV installation to include full dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install RenderCV
         run: |
-          pip install rendercv
+          pip install "rendercv[full]"
           
       - name: Render CV
         run: rendercv render Mihai_Ciocan_CV.yaml
